# DSP-SLAM-RGBD

./: .gitignore  CMakeLists copy.txt  CMakeLists.txt  README.md  README_ROS.md  build_cuda113.sh  build_cuda116.sh  build_my.sh  build_my_no.sh  build_myself.sh  dsp_slam.cc  dsp_slam_mono.cc  env_node  environment_cuda116.yml  package.xml  pcd2bin  qsp_slam_rgbd.cc  rrt_node  run.sh
Example/ROS/EllipsoidSLAM/: CMakeLists.txt  manifest.xml
Example/ROS/EllipsoidSLAM/launch/: demo.launch  extract_images.launch  publish_ICL.launch  publish_astra.launch  publish_real_dataset.launch  publish_real_dataset_image.launch
Example/ROS/EllipsoidSLAM/src/: extract_images.py  extract_images_2.py  ros_ellipsoid_slam.cpp  ros_ellipsoid_slam_real.cpp  ros_single_detection_for_real.cpp  ros_symmetry_detect.cpp  ros_template.cpp
Example/ROS/EllipsoidSLAM/src/tools_homeDataset/: pub_bbox_withTimeStamp.cpp  pub_odom_withTimeStamp.cpp
Example/interface/: CMakeLists.txt  rgbd_launcher.cpp
Example/interface/baseline/: NP.cpp  TrackingNP.h
Example/interface/func/: func.h
Example/interface/lab/: evo_hist_orientation.cpp  evo_local_det.cpp  experiment_lab.cpp
Example/interface/test/: test_planeExtraction.cpp  test_priconfig.cpp  test_projectionOfTextureArea.cpp  test_semanticprior.cpp  test_textureArea.cpp  test_visualizeMap.cpp
Example/interface/test/textureArea/: EllipsoidTexture.cpp  EllipsoidTexture.h  TestFunctions.cpp  TestFunctions.h  TextureOptimizer.cpp  TextureOptimizer.h  evo_checkAssociations.cpp  test_textureAreaAutoDetection.cpp  test_textureAreaFrames.cpp  test_textureAreaMultipleFrames.cpp
Example/interface/view_dataset/: CMakeLists.txt  dataset_viewer.cpp
Example/param/: OpenLORIS.yaml
Example/param/ICL-NUIM/: office-0.yaml  room-2.yaml
Example/param/TUM/: fr1_desk.yaml  fr1_desk2.yaml  fr1_xyz.yaml  fr2_desk.yaml  fr2_dishes.yaml  fr2_xyz.yaml  fr3_cabinet.yaml  fr3_long.yaml  fr3_teddy.yaml  fr3_walking_xyz.yaml
Example/param/demo/: kinect2.yaml
Example/param/home/: kinect2.yaml
Example/param/nmb/: kinect2.yaml
Example/param/real-home/: kinect2.yaml
configs/: freiburg_001.yaml  pritable.txt  redwood_09374.yaml  self_allobject_ground.yaml
include/: Candidate.h  Converter.h  Frame.h  FrameDrawer.h  KeyFrame.h  LocalMapping.h  Map.h  MapDrawer.h  MapObject.h  MapPoint.h  MapPublisher.h  NbvGenerator.h  ObjectDetection.h  ObjectDrawer.h  ObjectRenderer.h  Optimizer.h  Renderer.hpp  System.h  Tracking.h  Viewer.h  obstacles.h  rrt.h
include/core/: ConstrainPlane.h  Frame.h  FrameDrawer.h  Initializer.h  Map.h  MapDrawer.h  Optimizer.h  Plane.h  SupportingPlane.h  System.h  Tracking.h  Viewer.h
include/core/11/: Initializer.h  PriorInfer.h
include/ellipsoid/: Ellipsoid_zhjd.h  PriorInfer_zhjd.h
include/utils/: dataprocess_utils.h
reconstruct/: detector2d.py  loss.py  loss_utils.py  mono_sequence.py  optimizer.py
src/: Candidate.cpp  Converter.cc  Frame.cc  KeyFrame.cc  LocalMapping.cc  LocalMapping_util.cc  MapDrawer_ellipsoid.cc  MapObject.cc  MapObject_util.cc  MapPublisher.cc  Map_util.cc  NbvGenerator.cpp  ObjectDetection.cc  ObjectDrawer.cc  ObjectRenderer.cc  Optimizer.cc  Optimizer_util.cc  System.cc  Tracking.cc  Tracking_ellipsoid.cc  Tracking_util.cc  Viewer.cc  environment.cpp  obstacles.cpp  rrt.cpp  utils.cpp
src/111/core/: Geometry.cpp  PriorInfer.cpp
src/111/dense_builder/: builder.cpp
src/111/pca/: EllipsoidExtractorEdges.cpp  EllipsoidExtractorEdges.h
src/111/plane/: PlaneExtractor.cpp  PlaneExtractor.h
src/111/symmetry/: BorderExtractor.cpp  PointCloudFilter.h
src/Polygon/: CMakeLists.txt  Polygon.hpp
src/Relationship/: CMakeLists.txt  Relationship.cpp  Relationship.h
src/config/: CMakeLists.txt  Config.h
src/core/: DataAssociation.cpp  Ellipsoid.cpp  Frame.cpp  FrameDrawer.cpp  Initializer.cpp  Map.cpp  MapDrawer.cpp  NonparamDA.cpp  Optimizer.cpp  Plane.cpp  PriorInfer.cpp  SupportingPlane.cpp  System.cpp  Tracking.cpp  Viewer.cpp
src/dense_builder/: CMakeLists.txt  builder.cpp
src/ellipsoid/: Ellipsoid_zhjd.cpp  PriorInfer_zhjd.cpp
src/eval/: CMakeLists.txt
src/evo/: CMakeLists.txt
src/pca/: CMakeLists.txt  EllipsoidExtractor.cpp  EllipsoidExtractor.h  EllipsoidExtractorEdges.cpp  EllipsoidExtractorEdges.h  EllipsoidExtractorLocalOptimization.cpp  EllipsoidExtractorMultiPlanes.cpp
src/plane/: CMakeLists.txt  PlaneExtractor.cpp  PlaneExtractor.h
src/symmetry/: BorderExtractor.cpp  CMakeLists.txt  PointCloudFilter.cpp  Symmetry.h  SymmetrySolver.cpp
src/tum_rgbd/: CMakeLists.txt
